render total of current credits

--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
                 </ul>
             </div>
         </section>
+
+
     </main>
+    <section class="info-container">
+        <div class="info">
+            <div>Total Credits: </div>
+            <div id="sum-of-credit">0</div>
+            <div id="select-button">Select</div>
+        </div>
+    </section>
 
 </body>
 
