add logic to prevent user from select course more than once

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="info">
             <div>Total Credits: </div>
             <div id="sum-of-credit">0</div>
-            <div id="select-button">Select</div>
+            <div id="select-button" data-confirmed="0">Select</div>
         </div>
     </section>
 
